--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,6 @@
         
 
 .relative-pos{
-
     position: relative;
     background-color: black;
     height: 30px;
@@ -116,4 +115,7 @@ body{
     color:#ffff;
     background-color: #00C8C8;
    
+}
+.main-content-wrapper{
+    width: 100vw;
 }
