added top-nav component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,9 +3,8 @@
 <! <input type="text" [(ngModel)]="name"> -->
 <!-- <app-login [name] = "'Grace'"></app-login> --> 
 
-
+<app-top-nav></app-top-nav>
 <div class="wrapper">
-
     <app-side-nav> </app-side-nav>
 
     <div class="main-content-wrapper">
